refactor grammar and fix test sample
Define macro start with '#'.
Add type property for macro.
Simplify ast tree.